Fixed stretch logo in Safari

--- a/assets/header.css
+++ b/assets/header.css
@@ -73,7 +73,6 @@
 
 .header__logo-image {
   max-height: 64px;
-  width: 100%;
 }
 
 .header__date-picker-wrapper {
